--- a/submissions/yulyasystem/checkout-form/index.html
+++ b/submissions/yulyasystem/checkout-form/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous" />
-    <link rel="stylesheet" href="/dist/checkout-page.b19f721f.css">
+    <link rel="stylesheet" href="/dist/style.css">
   <title>Checkout Page</title>
 </head>
 
@@ -44,12 +44,12 @@
           </tr>
         </table>
         <div class="header-buttons">
+          <input type="submit" value="" id="submit-button" class="submit-input visually-hidden">
           <label for="submit-button" class=" button order-button" tabindex="0">
-            <input type="submit" value="" id="submit-button" class="submit-input visually-hidden">
             Place order
           </label>
+         <input type="button" value="" id="print-button" class="submit-input visually-hidden">
           <label for="print-button" class="button quote-button" tabindex="0">
-            <input type="button" value="" id="print-button" class="submit-input visually-hidden">
             Print a quote
           </label>
         </div>
@@ -75,16 +75,16 @@
       <fieldset class="selection-radio">
         <div class="radio-group">
           <div class="radio-button">
-            <input type="radio" name="group1" id="website" class="radio-input visually-hidden" required />
-            <label for="website" class="radio-label label-website" tabindex="0">
+            <input type="radio" name="group1" id="website" class="radio-input visually-hidden" required  />
+            <label for="website" class="radio-label label-website" >
               <img src="/img/website.png" alt="page icon" class="radio-img" />
               <span class="heading ">Website</span>
             </label>
           </div>
 
           <div class="radio-button">
-            <input type="radio" name="group1" id="document" class="radio-input visually-hidden" />
-            <label for="document" tabindex="0" class="radio-label label-document">
+            <input type="radio" name="group1" id="document" class="radio-input visually-hidden" checked />
+            <label for="document"  class="radio-label label-document">
               <img src="/img/documents.png" alt="page icon" class="radio-img" />
               <span class="heading">Document</span>
             </label>
@@ -92,7 +92,7 @@
 
           <div class="radio-button">
             <input type="radio" name="group1" id="account" class="radio-input visually-hidden" />
-            <label for="account" class="radio-label label-account" tabindex="0">
+            <label for="account" class="radio-label label-account" >
               <img src="/img/account.png" alt="page icon" class="radio-img" />
               <span class="heading">Social Account</span>
             </label>
@@ -107,7 +107,7 @@
           <b class="upload-heading">Upload your documents</b>
         </div>
         <input type="file" name="upload" id="input-file" class=" upload-input visually-hidden" />
-        <label for="input-file" class="upload-label-file" tabindex="0">
+        <label for="input-file" class="upload-label-file" >
           <i class="fas fa-cloud-upload-alt"></i>
           <b class="upload-label-text">Upload a new file</b>
         </label>
@@ -207,7 +207,7 @@
         <fieldset class="tone-radio">
           <div class="tone-radio-button">
             <input type="radio" name="group2" id="casual" class="tone-radio-input visually-hidden" required />
-            <label for="casual" class="tone-radio-label " tabindex="0">
+            <label for="casual" class="tone-radio-label " >
               <i class="fas fa-comments"></i>
               <span class="tone-span ">Friendly / Cassual</span>
             </label>
@@ -215,7 +215,7 @@
 
           <div class="tone-radio-button">
             <input type="radio" name="group2" id="pro" class="tone-radio-input visually-hidden" />
-            <label for="pro" tabindex="0" class="tone-radio-label ">
+            <label for="pro"  class="tone-radio-label ">
               <i class="fas fa-briefcase"></i>
               <span class="tone-span">Corporate / Pro</span>
             </label>
@@ -223,15 +223,12 @@
 
           <div class="tone-radio-button">
             <input type="radio" name="group2" id="formal" class="tone-radio-input visually-hidden" />
-            <label for="formal" class="tone-radio-label " tabindex="0">
+            <label for="formal" class="tone-radio-label " >
               <i class="fas fa-bullhorn"></i>
               <span class="tone-span">Media / Formal</span>
             </label>
           </div>
         </fieldset>
-
-
-
       </fieldset>
 
       <div class="range-section">
@@ -268,19 +265,20 @@
 
           <div class="card-field card-name">
             <label for="full-name" class="card-label">Full Name</label>
-            <input type="text" pattern="[A-Za-zА-Яа-яЁё]{1,}" name="full name" id="full-name" placeholder="Mathieu Mayer"
+            <input type="text" 
+            pattern="(?n:(^(?(?![^,]+?,)((?<first>[A-Z][a-z]*?) )?((?<second>[A-Z][a-z]*?) )?((?<third>[A-Z][a-z]*?) )?)(?<last>[A-Z](('|[a-z]{1,2})[A-Z])?[a-z]+))(?(?=,)(, (?<first>[A-Z][a-z]*?))?( (?<second>[A-Z][a-z]*?))?( (?<third>[A-Z][a-z]*?))?)$)" name="full name" id="full-name" placeholder="Mathieu Mayer"
               class="card-input " required>
           </div>
 
           <div class="card-field card-email">
             <label for="email-address" class="card-label">Email Address</label>
-            <input type="email" pattern="[A-Za-zА-Яа-яЁё]{1,}" name="email" id="femail-address" placeholder="kottans@me.com"
+            <input type="email" pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" name="email" id="femail-address" placeholder="kottans@me.com"
               class="card-input " required>
           </div>
 
           <div class="card-field card-password">
             <label for="password" class="card-label">Choose a password</label>
-            <input type="password" pattern="[A-Za-zА-Яа-яЁё]{1,}" name="password" id="password" class="card-input "
+            <input type="password" pattern="^[a-zA-Z]\w{3,14}$" name="password" id="password" class="card-input "
               minlength="6" placeholder="•••••••" required>
           </div>
 
@@ -292,25 +290,24 @@
 
         <div class="card-radio-button">
           <input type="radio" name="group3" id="visa" class="card-radio-input visually-hidden" required />
-          <label for="visa" class="card-radio-label " tabindex="0">
+          <label for="visa" class="card-radio-label " >
             <img src="/img/visa.png" alt="visa logo">
           </label>
         </div>
 
         <div class="card-radio-button">
-          <input type="radio" name="group3" id="paypal" class="card-radio-input visually-hidden" />
-          <label for="paypal" tabindex="0" class="card-radio-label ">
+          <input type="radio" name="group3" id="paypal" class="card-radio-input visually-hidden" checked />
+          <label for="paypal"  class="card-radio-label ">
             <img src="/img/paypal.png" alt="paypal logo">
           </label>
         </div>
 
         <div class="card-radio-button">
           <input type="radio" name="group3" id="amazon" class="card-radio-input visually-hidden" />
-          <label for="amazon" class="card-radio-label " tabindex="0">
+          <label for="amazon" class="card-radio-label " >
             <img src="/img/amazon.png" alt="amazon logo">
           </label>
         </div>
-
 
       </div>
 
@@ -319,23 +316,20 @@
         <div class="card-field card-number">
           <label for="number" class="card-label">Card number</label>
           <input type="text"  name="card number" id="number" 
-            minlength="16" maxlength="16" class="card-input input-name " required>
+            minlength="16" maxlength="16" class="card-input input-name " pattern="^(\d{4}-){3}\d{4}$|^(\d{4} ){3}\d{4}$|^\d{16}$" required>
         </div>
 
         <div class="card-field card-date">
           <label for="date" class="card-label">Expiry Date</label>
-          <input type="text" pattern="\d{2}/\d{2}/\d{2}" name="date" id="date" placeholder="DD / MM / YY"
+          <input type="text" pattern="^\d{1,2}\/\d{1,2}\/\d{4}$" name="date" id="date" placeholder="DD / MM / YY"
             class="card-input input-date " required>
         </div>
         
         <div class="card-field card-code">
           <label for="code" class="card-label">Code</label>
           <input type="text"  name="password" id="code" class="card-input input-code" minlength="3"
-            pattern="^[0-9]+$" required>
+            pattern="^(?!000)\d{3,4}$" required>
         </div>
-
-
-
       </div>
 
       <footer class="button-group-down">
@@ -344,19 +338,15 @@
           I agree to the 
           <a href="#" class="footer-link">Terms & Conditions</a>
         </label>
-
+          <input type="submit" value="" id="submit-button-footer" class="submit-input visually-hidden">
           <label for="submit-button-footer" class=" button order-button footer-button" tabindex="0">
-            <input type="submit" value="" id="submit-button-footer" class="submit-input visually-hidden">
             Place order
           </label>
+          <input type="button" value="" id="print-button-footer" class="submit-input visually-hidden">
           <label for="print-button-footer" class="button quote-button footer-button" tabindex="0">
-            <input type="button" value="" id="print-button-footer" class="submit-input visually-hidden">
             Print a quote
           </label>
-
       </footer>
-
-
     </form>
 
   </div>
@@ -364,3 +354,4 @@
 </body>
 
 </html>
+
