--- a/submissions/alexdefender/html5-order-form/index.html
+++ b/submissions/alexdefender/html5-order-form/index.html
@@ -17,7 +17,7 @@
             </button>
           </li>
           <li>
-            <img src="img/logo.jpg">
+            <a href="#"><img src="img/logo.jpg" /></a>
           </li>
           <li class="header__sing-in">
             <button class="btn">
@@ -166,7 +166,6 @@
             </tbody>
           </table>
         </section>
-
         <section class="language">
           <h2 class="language__header header__number">
             Choose your languages pairings
