Make requested changes

--- a/submissions/dnzln/popup/index.html
+++ b/submissions/dnzln/popup/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="top-bar">
+    <nav class="top-bar">
         <ul class="top-menu">
             <li class="menu-item"><a class="menu-item-link" href="#">Gmail</a></li>
             <li class="menu-item"><a class="menu-item-link" href="#">Images</a></li>
@@ -44,11 +44,11 @@
                                 <span class="bottom-text"><a class="bottom-link" href="#">Even more from Google</a></span>
                             </div>
                         </ul>
-                    </div>
+                </div>
             </li>
             <li class="menu-item"><a class="menu-item-link" href="#"></a></li>
             <li class="menu-item"><a class="menu-item-link" href="#"></a></li>
         </ul>
-    </div>
+    </nav>
 </body>
 </html>
