change final id to class

--- a/submissions/Eugene50/popup-menu/index.html
+++ b/submissions/Eugene50/popup-menu/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="menu-item"><a href="#">Mail</a></div>
         <div class="menu-item"><a href="#">Blog</a></div>
-        <input id="main-checkbox" type="checkbox">
+        <input class="main-checkbox" type="checkbox">
         <label class="menu-label" for="main-checkbox">
             <img class="menu-icon" src="img\menu.png" height="20" width="20"/>
         </label>
@@ -32,7 +32,7 @@
                 <a href="#"><div class="item" tabindex="10"><img src="img/10.png" alt="You">You</div></a> 
             </div>
 
-            <input id="sub-checkbox" type="checkbox">
+            <input class="sub-checkbox" type="checkbox">
             <label class="more-label" for="sub-checkbox">
                     <p>More</p>
             </label>
