add outlines according to review

--- a/submissions/feroxes/google-popup/index.html
+++ b/submissions/feroxes/google-popup/index.html
@@ -10,105 +10,149 @@
     <title>Big-Brother</title>
 </head>
 <body>
-    <div class="header">
-        <ul class="menu">
-            <li><a href="#" tabindex="1">Mail</a></li>
-            <li><a href="#" tabindex="2">Images</a></li>
-            <li><label id="dots_label" class="dots_label" for="dots" tabindex="3"></label></li>
-            <input id="dots" class="dots_input" type="checkbox">
+<div class="header">
+    <ul class="menu">
+        <li><a href="#">Mail</a></li>
+        <li><a href="#">Images</a></li>
+        <li>
+            <input id="dots" class="dots_input visually-hidden" type="checkbox">
+            <label id="dots_label" class="dots_label" for="dots"></label>
             <div class="big-brother_services">
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="search"></div></a>
+                    <a href="#">
+                        <div class="search"></div>
+                    </a>
                     Search
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="maps"></div></a>
+                    <a href="#">
+                        <div class="maps"></div>
+                    </a>
                     Maps
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="youtube"></div></a>
+                    <a href="#">
+                        <div class="youtube"></div>
+                    </a>
                     Tube
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="news"></div></a>
+                    <a href="#">
+                        <div class="news"></div>
+                    </a>
                     News
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="gmail"></div></a>
+                    <a href="#">
+                        <div class="gmail"></div>
+                    </a>
                     Mail
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="contacts"></div></a>
+                    <a href="#">
+                        <div class="contacts"></div>
+                    </a>
                     Contacts
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="drive"></div></a>
+                    <a href="#">
+                        <div class="drive"></div>
+                    </a>
                     Driver
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="calendar"></div></a>
+                    <a href="#">
+                        <div class="calendar"></div>
+                    </a>
                     Calendar
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="bigplus"></div></a>
+                    <a href="#">
+                        <div class="bigplus"></div>
+                    </a>
                     Big_Brother+
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="translator"></div></a>
+                    <a href="#">
+                        <div class="translator"></div>
+                    </a>
                     Translator
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="photo"></div></a>
+                    <a href="#">
+                        <div class="photo"></div>
+                    </a>
                     Photo
                 </div>
                 <div class="big-brother_services-icon">
-                    <a href="#"><div class="docs"></div></a>
+                    <a href="#">
+                        <div class="docs"></div>
+                    </a>
                     Docs
                 </div>
                 <input id="more" class="more_input" type="checkbox">
                 <label class="big-brother_services-button more-icons" for="more">More</label>
                 <div class="big-brother_services-icon hidden">
-                    <a href="#"><div class="playmarket"></div></a>
+                    <a href="#">
+                        <div class="playmarket"></div>
+                    </a>
                     Big Market
                 </div>
                 <div class="big-brother_services-icon hidden">
-                    <a href="#"><div class="account"></div></a>
+                    <a href="#">
+                        <div class="account"></div>
+                    </a>
                     Account
                 </div>
                 <div class="big-brother_services-icon hidden">
-                    <a href="#"><div class="sheets"></div></a>
+                    <a href="#">
+                        <div class="sheets"></div>
+                    </a>
                     Sheets
                 </div>
                 <div class="big-brother_services-icon hidden">
-                    <a href="#"><div class="news"></div></a>
+                    <a href="#">
+                        <div class="news"></div>
+                    </a>
                     News
                 </div>
                 <div class="big-brother_services-icon hidden">
-                    <a href="#"><div class="gmail"></div></a>
+                    <a href="#">
+                        <div class="gmail"></div>
+                    </a>
                     Mail
                 </div>
                 <div class="big-brother_services-icon hidden">
-                    <a href="#"><div class="contacts"></div></a>
+                    <a href="#">
+                        <div class="contacts"></div>
+                    </a>
                     Contacts
                 </div>
                 <div class="big-brother_services-icon hidden">
-                    <a href="#"><div class="search"></div></a>
+                    <a href="#">
+                        <div class="search"></div>
+                    </a>
                     Search
                 </div>
                 <div class="big-brother_services-icon hidden">
-                    <a href="#"><div class="maps"></div></a>
+                    <a href="#">
+                        <div class="maps"></div>
+                    </a>
                     Maps
                 </div>
                 <div class="big-brother_services-icon hidden">
-                    <a href="#"><div class="youtube"></div></a>
+                    <a href="#">
+                        <div class="youtube"></div>
+                    </a>
                     Big Tube
                 </div>
             </div>
-            <li>
-                <div class="bell" tabindex="4"></div>
-            </li>
-            <li><img class="face" src="img/face.png" alt="" tabindex="5"></li>
-        </ul>
-    </div>
+        </li>
+        <li>
+            <a href="#" ><img src="https://img.icons8.com/ios-glyphs/22/000000/appointment-reminders.png"></a>
+        </li>
+        <li><img class="face" src="img/face.png" alt=""></li>
+    </ul>
+</div>
 </body>
 </html>
