add label for input checkbox

--- a/submissions/vitaliykravchyk/popup/index.html
+++ b/submissions/vitaliykravchyk/popup/index.html
@@ -17,7 +17,9 @@
         <a href="images">Images</a>
       </li>
       <li class="popup">
-        <input type="checkbox" name="popup__checkbox" id="popup__checkbox" class="popup__checkbox"  >
+				<label class="popup__label">
+					<input type="checkbox" name="popup__checkbox" id="popup__checkbox" class="popup__checkbox">
+				
         <div class="wrapper">
           <ul class="drop-menu">
             <li>
@@ -154,7 +156,8 @@
               <a href="#" class="item item--even-more">Even more</a>
             </li>
           </ul>
-        </div>
+				</div>
+			</label>
       </li>
       <li class="notification">
         <a href="notification">
