--- a/submissions/vitaliykravchyk/popup/index.html
+++ b/submissions/vitaliykravchyk/popup/index.html
@@ -17,9 +17,9 @@
         <a href="images">Images</a>
       </li>
       <li class="popup">
-				<label class="popup__label">
-					<input type="checkbox" name="popup__checkbox" id="popup__checkbox" class="popup__checkbox">
-				
+				<label class="popup__label" for="popup__checkbox">
+				</label>
+				<input type="checkbox" name="popup__checkbox" id="popup__checkbox" class="popup__checkbox">
         <div class="wrapper">
           <ul class="drop-menu">
             <li>
@@ -157,7 +157,6 @@
             </li>
           </ul>
 				</div>
-			</label>
       </li>
       <li class="notification">
         <a href="notification">
