--- a/submissions/bugagashinka/html5-form/index.html
+++ b/submissions/bugagashinka/html5-form/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link
+      rel="stylesheet"
+      href="./fonts/font-awesom/css/font-awesome.min.css"
+    />
     <title>HTML5: Forms task</title>
   </head>
   <body>
@@ -14,14 +18,16 @@
         <div class="container">
           <section class="row heading">
             <button type="button" class="button">Go back</button>
-            <svg class="logo">
-              <g transform="translate(0,-942.36218)">
-                <path
-                  d="m 54.859268,946.47005 c -28.69536,0 -51.9687498,23.10091 -51.9687498,51.62499 0,28.52406 23.2733898,51.65626 51.9687498,51.65626 28.69536,0 51.937502,-23.1322 51.937502,-51.65626 0,-28.52408 -23.242142,-51.62499 -51.937502,-51.62499 z m -0.4375,18.75 c 18.31234,0 33.1875,14.84392 33.1875,33.15629 0,6.41546 -1.84038,12.39376 -5,17.46866 l 7.375,19.1563 -19.90625,-7.4063 c -4.66726,2.5026 -9.99336,3.9375 -15.65625,3.9375 -18.31233,0 -33.15625,-14.8439 -33.15625,-33.15616 0,-18.31237 14.84392,-33.15629 33.15625,-33.15629 z m 0.0625,19.3125 c -7.89864,0 -14.3125,6.43599 -14.3125,14.37499 0,7.93896 6.41386,14.37496 14.3125,14.37496 7.89865,0 14.28125,-6.436 14.28125,-14.37496 0,-7.939 -6.3826,-14.37499 -14.28125,-14.37499 z"
-                  style="fill:#DADDE7;fill-opacity:1;stroke:#DADDE7;stroke-width:1.07500005;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none;display:inline"
-                />
-              </g>
-            </svg>
+            <a href="#" class="logo">
+              <svg width="110" height="110">
+                <g transform="translate(0,-942.36218)">
+                  <path
+                    d="m 54.859268,946.47005 c -28.69536,0 -51.9687498,23.10091 -51.9687498,51.62499 0,28.52406 23.2733898,51.65626 51.9687498,51.65626 28.69536,0 51.937502,-23.1322 51.937502,-51.65626 0,-28.52408 -23.242142,-51.62499 -51.937502,-51.62499 z m -0.4375,18.75 c 18.31234,0 33.1875,14.84392 33.1875,33.15629 0,6.41546 -1.84038,12.39376 -5,17.46866 l 7.375,19.1563 -19.90625,-7.4063 c -4.66726,2.5026 -9.99336,3.9375 -15.65625,3.9375 -18.31233,0 -33.15625,-14.8439 -33.15625,-33.15616 0,-18.31237 14.84392,-33.15629 33.15625,-33.15629 z m 0.0625,19.3125 c -7.89864,0 -14.3125,6.43599 -14.3125,14.37499 0,7.93896 6.41386,14.37496 14.3125,14.37496 7.89865,0 14.28125,-6.436 14.28125,-14.37496 0,-7.939 -6.3826,-14.37499 -14.28125,-14.37499 z"
+                    style="fill:#DADDE7;fill-opacity:1;stroke:#DADDE7;stroke-width:1.07500005;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none;display:inline"
+                  />
+                </g>
+              </svg>
+            </a>
             <button type="button" class="button">Sign In</button>
           </section>
         </div>
@@ -125,12 +131,20 @@
           </section>
           <section class="row upload">
             <h2>
-              Upload your documents <span>(Doc, ocx, Text, PDF, markdown)</span>
+              Upload your documents
+              <span class="file-types-title"
+                >(Doc, Docx, Text, PDF, markdown)</span
+              >
             </h2>
             <div class="button upload-button">
               <img class="icon upload-icon" src="./img/upload.svg" alt="" />
               <label for="file-upload">Upload a new file</label>
-              <input id="file-upload" name="filePath" type="file" />
+              <input
+                id="file-upload"
+                name="filePath"
+                type="file"
+                accept=".doc,.docx,.txt,.pdf,.md"
+              />
               <span class="upload-button-border"></span>
             </div>
 
@@ -178,7 +192,7 @@
           <section class="row languages">
             <h2>Choose your languages pairings</h2>
             <div class="lang-from">
-              <label class="">From</label>
+              <label class="lang-label lang-from-label">From</label>
               <div class="select">
                 <select name="from" required>
                   <option value="">Choose</option>
@@ -191,7 +205,7 @@
               </div>
             </div>
             <div class="lang-to">
-              <label class="">To</label>
+              <label class="lang-label lang-to-label">To</label>
               <div class="select">
                 <select name="lang-to-1" required>
                   <option value="">Choose</option>
@@ -275,14 +289,16 @@
           </section>
           <section class="row timeline">
             <h2>Tell us how urgent this job is</h2>
-            <input
-              type="range"
-              class="slider"
-              min="0"
-              max="2"
-              value="1"
-              step="1"
-            />
+            <div class="slider-container">
+              <input
+                type="range"
+                class="slider"
+                min="0"
+                max="2"
+                value="1"
+                step="1"
+              />
+            </div>
             <div class="range-labels">
               <span class="range-label-item">I got time</span>
               <span class="range-label-item">Average</span>
@@ -408,53 +424,53 @@
                   </span>
                 </label>
               </div>
-
-              <div class="field-block">
-                <label for="card-number" class="input-label">Card number</label>
-                <input
-                  type="text"
-                  id="card-number"
-                  class="input-field input-card"
-                  name="card"
-                  pattern="[0-9\/]*"
-                  title="Enter 16 numbers of your credit card"
-                  minlength="16"
-                  maxlength="16"
-                  required
-                />
-                <span class="card-sticker">Visa</span>
-              </div>
-              <div class="field-block">
-                <label for="expiry-date" class="input-label">Expiry date</label>
-                <input
-                  type="text"
-                  id="expiry-date"
-                  class="input-field input-date"
-                  name="expiry-date"
-                  title="Expiration date of your card DD/MM/YY"
-                  inputmode="numeric"
-                  pattern="([0-9]{2}[/]?){3}"
-                  maxlength="8"
-                  placeholder="DD/MM/YY"
-                  required
-                />
-                <span class="check-status date-check-status"></span>
-              </div>
-              <div class="field-block">
-                <label for="card-code" class="input-label">Code</label>
-                <input
-                  type="password"
-                  id="card-code"
-                  class="input-field input-code"
-                  name="code"
-                  title="CVV code"
-                  inputmode="numeric"
-                  pattern="[0-9]{3}"
-                  minlength="3"
-                  maxlength="3"
-                  required
-                />
-                <span class="check-status code-check-status"></span>
+              <div class="card-props">
+                <div class="field-block">
+                  <label for="card-number" class="input-label"
+                    >Card number</label
+                  >
+                  <input
+                    type="text"
+                    id="card-number"
+                    class="input-field input-card"
+                    name="card"
+                    pattern="[0-9\/]*"
+                    title="Enter 16 numbers of your credit card"
+                    minlength="16"
+                    maxlength="16"
+                    required
+                  />
+                  <span class="card-sticker">Visa</span>
+                </div>
+                <div class="field-block">
+                  <label for="expiry-date" class="input-label"
+                    >Expiry date</label
+                  >
+                  <input
+                    type="date"
+                    id="expiry-date"
+                    class="input-field input-date"
+                    name="expiry-date"
+                    title="Expiration date of your card DD/MM/YY"
+                    required
+                  />
+                </div>
+                <div class="field-block">
+                  <label for="card-code" class="input-label">Code</label>
+                  <input
+                    type="text"
+                    id="card-code"
+                    class="input-field input-code"
+                    name="code"
+                    title="CVV code"
+                    inputmode="numeric"
+                    pattern="[0-9]{3}"
+                    minlength="3"
+                    maxlength="3"
+                    required
+                  />
+                  <span class="check-status code-check-status"></span>
+                </div>
               </div>
             </div>
             <div>
@@ -480,7 +496,10 @@
     <footer>
       <address class="container">
         <div class="goal">
-          <h4><span class="icon">icon</span>What we do</h4>
+          <span class="footer-title">
+            <i class="fa fa-heart-o fa-lg footer-icon" aria-hidden="true"></i
+            >What we do</span
+          >
           <em>
             We provide a full range of language services inluding content
             development, documents, website and social media account
@@ -488,31 +507,39 @@
           </em>
         </div>
         <div class="contact">
-          <h4><span class="icon">icon</span>Our main office</h4>
+          <span class="footer-title">
+            <i class="fa fa-compass fa-lg footer-icon" aria-hidden="true"></i
+            >Our main office</span
+          >
           <ul class="list">
             <li>Dubai, UAE</li>
             <li>P.O. Box: 502735</li>
-            <li class="phone help-phone">
+            <li class="phone footer-phone">
               <a href="tel:+971(0)44278128">Phone: +971 (0) 44278128</a>
             </li>
           </ul>
         </div>
         <div class="social-links">
-          <h4><span class="icon">icon</span>Connect with us</h4>
+          <span class="footer-title">
+            <i class="fa fa-share-alt fa-lg footer-icon" aria-hidden="true"></i
+            >Connect with us</span
+          >
           <ul class="list">
-            <li>Facebook</li>
-            <li>Twitter</li>
-            <li>Linkedin</li>
+            <li><a class="social-link" href="#">Facebook</a></li>
+            <li><a class="social-link" href="#">Twitter</a></li>
+            <li><a class="social-link" href="#">Linkedin</a></li>
           </ul>
         </div>
-        <svg class="logo">
-          <g transform="translate(0,-942.36218)">
-            <path
-              d="m 54.859268,946.47005 c -28.69536,0 -51.9687498,23.10091 -51.9687498,51.62499 0,28.52406 23.2733898,51.65626 51.9687498,51.65626 28.69536,0 51.937502,-23.1322 51.937502,-51.65626 0,-28.52408 -23.242142,-51.62499 -51.937502,-51.62499 z m -0.4375,18.75 c 18.31234,0 33.1875,14.84392 33.1875,33.15629 0,6.41546 -1.84038,12.39376 -5,17.46866 l 7.375,19.1563 -19.90625,-7.4063 c -4.66726,2.5026 -9.99336,3.9375 -15.65625,3.9375 -18.31233,0 -33.15625,-14.8439 -33.15625,-33.15616 0,-18.31237 14.84392,-33.15629 33.15625,-33.15629 z m 0.0625,19.3125 c -7.89864,0 -14.3125,6.43599 -14.3125,14.37499 0,7.93896 6.41386,14.37496 14.3125,14.37496 7.89865,0 14.28125,-6.436 14.28125,-14.37496 0,-7.939 -6.3826,-14.37499 -14.28125,-14.37499 z"
-              style="fill:#383D50;fill-opacity:1;stroke:#383D50;stroke-width:1.07500005;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none;display:inline"
-            />
-          </g>
-        </svg>
+        <a class="logo" href="#">
+          <svg width="110" height="110">
+            <g transform="translate(0,-942.36218)">
+              <path
+                d="m 54.859268,946.47005 c -28.69536,0 -51.9687498,23.10091 -51.9687498,51.62499 0,28.52406 23.2733898,51.65626 51.9687498,51.65626 28.69536,0 51.937502,-23.1322 51.937502,-51.65626 0,-28.52408 -23.242142,-51.62499 -51.937502,-51.62499 z m -0.4375,18.75 c 18.31234,0 33.1875,14.84392 33.1875,33.15629 0,6.41546 -1.84038,12.39376 -5,17.46866 l 7.375,19.1563 -19.90625,-7.4063 c -4.66726,2.5026 -9.99336,3.9375 -15.65625,3.9375 -18.31233,0 -33.15625,-14.8439 -33.15625,-33.15616 0,-18.31237 14.84392,-33.15629 33.15625,-33.15629 z m 0.0625,19.3125 c -7.89864,0 -14.3125,6.43599 -14.3125,14.37499 0,7.93896 6.41386,14.37496 14.3125,14.37496 7.89865,0 14.28125,-6.436 14.28125,-14.37496 0,-7.939 -6.3826,-14.37499 -14.28125,-14.37499 z"
+                style="fill:#383D50;fill-opacity:1;stroke:#383D50;stroke-width:1.07500005;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none;display:inline"
+              />
+            </g>
+          </svg>
+        </a>
       </address>
     </footer>
   </body>
